# syser

./: .gitattributes  changelog  cmake.bat  list_of_sources  readme.md
Plugin example/: api.cpp  plugin.cpp
addition/DiaSDK/lib/amd64/: diaguids.lib
cmake/: msvc-showcmd.cmake  msvc-tools.cmake
plugin example/SyserHide/: SyserHideInfo.txt
screenshot/: readme.md
source/: CMakeLists.txt  MFCSymbols.cpp  pdb2sds.cpp  resource.rc  syser.manifest  unpack.cpp
source/Code/: cmdparser.cpp  cmdparser.hpp  compress.cpp  compress.hpp  define.h  fileio.cpp  fileio.hpp  fileiont.cpp  fileiont.hpp  handle.cpp  handle.hpp  imagefile.cpp  imagefile.hpp  modf.cpp  options.cpp  options.hpp  osdefine.hpp  pageimage.hpp  pagemem.cpp  pagemem.hpp  polyfs.cpp  polyfs.hpp  srctxtfile.cpp  srctxtfile.hpp  strmem.cpp  sysdep.cpp  sysdep.hpp  time.cpp  time.hpp  tstrmem.hpp  txtfile.cpp  txtfile.hpp  utxtfile.cpp  utxtfile.hpp
source/Code/alt/: altarray.hpp  altbase.hpp  altexpcalc.hpp  altfile.hpp  altlist.hpp  altmap.hpp  altqueue.hpp  altstack.hpp  altstring.hpp
source/EXEAnalyzer/: debugger.cpp  debugger.hpp  instrsym.cpp  instrsym.hpp  inteldis.cpp  inteldis.hpp  mzhead.hpp  pefile.cpp  pefile.hpp  pehead.hpp  sdsfile.hpp  sdsmodule.cpp  sdsmodule.hpp  sdwin.cpp  sdwin.hpp  sourcedebug.cpp  sourcedebug.hpp  symbol.cpp  symbol.hpp  x86debugger.cpp  x86debugger.hpp
source/Wisp/: dibdata.cpp  utility.cpp  utility.hpp  wispapp.cpp  wispapp.hpp  wispbase.cpp  wispbase.hpp  wispbasewnd.cpp  wispbasewnd.hpp  wispbutton.cpp  wispbutton.hpp  wispcalcwnd.cpp  wispcalcwnd.hpp  wispcheckbox.cpp  wispcheckbox.hpp  wispcolorstrwnd.cpp  wispcolorstrwnd.hpp  wispcombobox.cpp  wispcombobox.hpp  wispconsolewnd.cpp  wispconsolewnd.hpp  wispdc.cpp  wispdc.hpp  wispdib.cpp  wispdib.hpp  wispdraw.cpp  wispdraw.hpp  wispdrawobj.cpp  wispdrawobj.hpp  wispedit.cpp  wispedit.hpp  wispfont.cpp  wispfont.hpp  wispform.cpp  wispform.hpp  wisphexwnd.cpp  wisphexwnd.hpp  wisplist.cpp  wisplist.hpp  wispmenu.cpp  (+30 more)
source/WispSyser/: SyserRing3.cpp  SyserRing3.hpp  aboutform.cpp  aboutform.hpp  breakpointform.cpp  breakpointform.hpp  bugcheckcode.cpp  callstackwnd.cpp  callstackwnd.hpp  codebpedit.cpp  codebpedit.hpp  codeview.cpp  codeview.hpp  commentlist.cpp  commentlist.hpp  consolewnd.cpp  consolewnd.hpp  crossreferenceform.cpp  crossreferenceform.hpp  currentfunction.cpp  currentfunction.hpp  databpedit.cpp  databpedit.hpp  dataoperatordlg.cpp  dataoperatordlg.hpp  dataview.cpp  dataview.hpp  dataviewform.cpp  dataviewform.hpp  debuggerselectform.cpp  debuggerselectform.hpp  findlistwnd.cpp  findlistwnd.hpp  findstringform.cpp  findstringform.hpp  fpuregisterlist.cpp  fpuregisterlist.hpp  functionlistwnd.cpp  functionlistwnd.hpp  gdtwnd.cpp  (+81 more)
wisp/x32/: Syser.cfg  SyserColor.cfg  syser.lib  syser32.lib
wisp/x32/Plugin/: plugin.hpp  spcommand.cpp
wisp/x64/: README  Syser.cfg  syser.lib  syser64.lib
wisp/x64/Plugin/: spcommand.cpp
x32/: cmake32_debug.bat  cmake32_debug_clang.bat  cmake32_ninja_debug.bat  cmake32_ninja_debug_clang.bat  cmake32_ninja_release.bat  cmake32_ninja_release_clang.bat  cmake32_release.bat  cmake32_release_clang.bat  cmake_build.bat  cmake_clean.bat  syserx32.lib
x64/: README  cmake64_debug.bat  cmake64_debug_clang.bat  cmake64_ninja_debug.bat  cmake64_ninja_debug_clang.bat  cmake64_ninja_release.bat  cmake64_ninja_release_clang.bat  cmake64_release.bat  cmake64_release_clang.bat  plugin.hpp  syserx64.lib
